"Correcting" download menu icon alignment

--- a/src/css/dropdown-menu.css
+++ b/src/css/dropdown-menu.css
@@ -115,8 +115,3 @@
   background-color: rgba(255, 255, 255, 0.12);
   text-shadow: 1px 1px 1px #673c90;
 }
-
-.wgsa-button-icon {
-  vertical-align: middle;
-  margin-right: 4px;
-}
