--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -39,13 +39,25 @@ fieldset > legend {
   outline: none;
 }
 
+
+/* pushes icon in download menu up a bit for alignment */
+button.wgsa-download-button:not(.mdl-button--icon) .material-icons {
+  margin-top: -4px;
+}
+
 .wgsa-download-icon {
   display: inline-block;
   vertical-align: middle;
   height: 32px;
   width: 32px;
+  line-height: 32px;
 }
 
 .wgsa-download-icon .wgsa-button-icon {
   color: #673c90;
+}
+
+.wgsa-button-icon {
+  vertical-align: middle;
+  margin-right: 4px;
 }
