--- a/src/css/table.css
+++ b/src/css/table.css
@@ -90,7 +90,7 @@
 .wgsa-download-label {
   font-size: 8px;
   position: absolute;
-  top: 16px;
+  top: 4px;
   left: 0;
   right: 0;
   z-index: 1;
